--- a/modules/player/project.json
+++ b/modules/player/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "modules/player/src",
   "prefix": "lib",
-  "tags": [],
+  "tags": ["type:feature", "scope:player"],
   "projectType": "library",
   "targets": {
     "test": {
