--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "~16.2.0",
     "@nx/angular": "16.7.4",
     "rxjs": "~7.8.0",
+    "spotify-web-api-js": "^1.5.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
