--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nx/angular": "16.7.4",
     "rxjs": "~7.8.0",
     "spotify-web-api-js": "^1.5.2",
+    "date-fns": "^2.28.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
